--- a/css.css
+++ b/css.css
@@ -124,3 +124,44 @@
     }
 }
 
+.br_up_left_right_10px-s{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.bg_filter_img-s{
+    background-image: url(images/filter.svg);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 24%;
+    opacity: .4;
+}
+
+.star_img-s{
+    width: 10px;
+}
+
+.fs_10px-s{
+    font-size: 10px;
+}
+
+.fg_yellow-s{
+    color: #EAC600;
+}
+
+.opacity_4-s{
+    opacity: .4;
+}
+
+.field input{
+    position: absolute;
+}
+
+
+@media screen and (max-width:375px) {
+    .fs_33px_on_sm-s{
+        font-size: 33px;
+    }
+}
+
+
