--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -738,4 +738,59 @@ sup {
 }
 
 
+/* ----- Chat - start ---- */
+
+.bg-greenish_grey-s {
+    background-color: #E5EEE7;
+}
+
+.fg_lightgrey_s {
+    color: #00000017;
+}
+
+.ft_17px-s {
+    font-size: 17px;
+}
+
+.fg_green-s {
+    color: #006400;
+}
+
+.br_fg-s {
+    border: 1px solid #006400;
+}
+
+.br_10px-s {
+    border-radius: 10px;
+}
+
+.profile_img-s {
+    /* background-color: darkseagreen; */
+    width: 54px;
+    height: 54px;
+    border-radius: 37px;
+    border: 1px solid green;
+}
+
+.img_set_to_div-s {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.message_count-s {
+    width: 40%;
+    background-color: green;
+    height: 40%;
+    border-radius: 20px;
+}
+
+.fg_white-s {
+    color: white;
+}
+
+
+/* ----- Chat - end ---- */
+
+
 /* ----- USMAN WORK - END ----- */
