--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-html {
+/* html {
     font-size: 62.5%;
-}
+} */
 
 
 /* .................Home Page CSS Start .........................  */
@@ -815,7 +815,9 @@ sup {
 .textarea_h_w-s {
     min-height: 50px;
     max-height: 70px;
+    resize: none;
 }
+
 
 
 /*
@@ -1056,7 +1058,7 @@ input:checked+.slider:before {
 .chat_button-s{
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: -15px;
     cursor: pointer;
     z-index: 1;
 }
@@ -1065,14 +1067,153 @@ input:checked+.slider:before {
 .wrapper {
     position: fixed;
     right: 32px;
-    bottom: 131px;
+    bottom: 121px;
     background-color: #F3F3F3;
     border-radius: 20px;
     transition: all 0.4s;
     z-index: 1;
 }
 
+.w_439px_h_633px-s{
+    width: 349px;
+    height: 439px;
+    overflow-y: auto;
+}
 
+.br_left_10px-s {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.h_50px-s{
+    height: 50px;
+}
+
+.fs_27px-s{
+    font-size: 27px;
+}
+
+/* .rating_filed-s{
+    position: relative;
+}
+
+.rating_filed-s input[type=range] {
+    width: 100%;
+    height: 6px; 
+    border: 0;
+    outline: 0;
+    border-radius: 5px;
+    pointer-events: none;
+    -webkit-appearance: none;
+} */
+
+/* .rating_filed-s input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+} */
+
+/* .rating_filed-s input[type=range]:active,
+.rating_filed-s input[type=range]:focus {
+  outline: 0;
+}
+
+.rating_filed-s input[type=range]::-ms-track {
+  width: 188px;
+  height: 2px; 
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  border-radius: 5px;
+  pointer-events: none;
+  background: red;
+  border-color: red;
+  color: red;
+  border-radius: 5px;
+}
+
+/* Style toddler input range */
+
+/*.rating_filed-s input[type=range]::-webkit-slider-thumb { 
+  /* WebKit/Blink */
+    /*position: relative;
+    -webkit-appearance: none;
+    margin: 0;
+    border: 0;
+    outline: 0;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    margin-top: -4px;
+    background-color: #fff;
+    cursor: pointer;
+    cursor: pointer;
+    pointer-events: all;
+    z-index: 100;
+} */
+
+/* .rating_filed-s input[type=range]::-moz-range-thumb { 
+
+  position: relative;
+  appearance: none;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin-top: -5px;
+  background-color: #fff;
+  cursor: pointer;
+  cursor: pointer;
+  pointer-events: all;
+  z-index: 100;
+} */
+
+/* .rating_filed-s input[type=range]::-ms-thumb  { 
+  
+  position: relative;
+  appearance: none;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
+  margin-top: -5px;
+  background-color: #fff;
+  cursor: pointer;
+  cursor: pointer;
+  pointer-events: all;
+  z-index: 100;
+} */
+
+/* Style track input range */
+
+/* .rating_filed-s input[type=range]::-webkit-slider-runnable-track { 
+  
+  width: 188px;
+  height: 2px;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px; */
+/* } */
+
+/* .rating_filed-s input[type=range]::-moz-range-track { 
+  
+  width: 188px;
+  height: 2px;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px;
+} */
+
+/*.rating_filed-s input[type=range]::-ms-track { 
+  
+  width: 188px;
+  height: 2px;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px;
+} */
 /*notification button end*/
 
 
